--- a/miniProject2/Base.lproj/Main.storyboard
+++ b/miniProject2/Base.lproj/Main.storyboard
@@ -121,6 +121,13 @@
                                 <color key="textColor" red="0.31485067979999998" green="0.78069908269999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hi!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1MI-mN-r7k">
+                                <rect key="frame" x="51" y="703" width="66" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2gG-El-vn4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
